# eyelander-engine

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONVENTION.md  convention.md
src/: main.c  main.cpp
src/boot/: main.lua
src/core/: components.h  engine.c  engine.h  log.h  lua_env.c  lua_env.h  platform.h
src/ecs/components/: CTransform.h
